2008-11-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstpad.c: (gst_pad_accept_caps):
	Avoid getting the acceptcaps function too early.

2008-11-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tools/gst-launch.c: (event_loop):
	Make gst-launch handle LATENCY messages and make it recalculate the
	latency.

2008-11-20  Michael Smith <msmith@songbirdnest.com>

	* plugins/elements/gstfilesrc.c:
	  Use g_filename_from_uri() for URI parsing in filesrc rather than rolling
	  out own slightly incorrect version. Fixes use of some paths on
	  win32.

2008-11-20  Michael Smith <msmith@songbirdnest.com>

	* gst/gstregistrybinary.c:
	  In win32 codepath, if we fail to write the registry, create the
	  directory for it and try again, matching the behaviour in non-win32
	  codepaths.

2008-11-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesink.c: (gst_base_sink_set_render_delay):
	Changing the render delay changes the latency and so we must post a
	latency message.

2008-11-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstquery.c:
	* gst/gstquery.h:
	Add GstQueryType for custom queries instead of having to use the
	not-so-very-convenient registration infrastructure to register new
	types.

2008-11-19  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Andrew Feren <acferen at yahoo dot com>

	* gst/gstobject.c: (gst_object_default_deep_notify):
	Unref the GEnumClass after usage again. Fixes bug #561501.

2008-11-19  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstbin.c: (_gst_boolean_accumulator), (gst_bin_class_init),
	(gst_bin_recalculate_latency), (gst_bin_do_latency_func),
	(gst_bin_change_state_func):
	* gst/gstbin.h:
	Add do-latency signal with the old default fallback implementation. This
	allows for custom latency calculations for when the default is not
	sufficient.
	API: GstBin::do-latency signal.

2008-11-18  Wim Taymans  <wim.taymans@collabora.co.uk>

	* win32/common/libgstreamer.def: